# junk

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  INSTALL.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build.yml
assets/: README.txt
src/: index.html  main.js  preload.js  renderer.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
